tools/flowc/tests/errors/error42.flow
// Semicolon is absent after assign

import runtime;

main() -> void {
	a = 5
	
	if (a == 5)
		println("Hello");
}
